modified:   css/style.css

--- a/css/style.css
+++ b/css/style.css
@@ -502,6 +502,7 @@ footerbox {
     font-weight: 600;
 	height: 40px;
 	margin-left: 15px;
+	margin-top: 15px;
     padding: 6px 23px;
     font-size: 15px;
     border: 2px solid transparent;
